tests/bad_programs/type_errors/while_bool_or_double.nc
int main() {
    double d = 3.6;
    while (true || d) {
    }
    return 0;
}
